--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ project:
     - events_past.qmd
     - events_upcoming.qmd
     - index.qmd
+    - nextgen.qmd
     - purpose.qmd
     - trainings_past.qmd
     - updates.qmd
@@ -25,6 +26,8 @@ website:
           href: purpose.html
         - text: "BBS board"
           href: board.html
+        - text: "BBS Next Generation committee"
+          href: nextgen.html
     - text: "Upcoming events"
       menu:
         - text: "Announcements of upcoming events"
