--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ project:
     - trainings/20220913
     - trainings/20230903
     - talks/20191101
+    - statbloc.qmd
 
 website:
   title: "Basel Biometrics Society"
