--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ project:
     - events_upcoming.qmd
     - index.qmd
     - nextgen.qmd
+    - suisseromande.qmd
     - purpose.qmd
     - trainings_past.qmd
     - updates.qmd
@@ -17,6 +18,7 @@ project:
     - talks/20250319
     - talks/20250824
     - statbloc.qmd
+
 
 website:
   title: "Basel Biometrics Society"
@@ -31,6 +33,8 @@ website:
           href: board.html
         - text: "BBS NextGen committee"
           href: nextgen.html
+        - text: "BBS SR committee"
+          href: suisseromande.html
     - text: "Upcoming events"
       menu:
         - text: "Announcements of upcoming events"
